<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="planner.view.android.AddItemActivity">

    <ScrollView
        android:id="@+id/add_scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:layout_marginEnd="@dimen/activity_horizontal_margin"
            android:orientation="vertical">

            <TextView
                android:id="@+id/add_type_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:labelFor="@+id/add_type"
                android:text="@string/item_type" />

            <Spinner
                android:id="@+id/add_type"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <LinearLayout
                android:id="@+id/add_layout_standard"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/add_title_label"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:labelFor="@id/add_title"
                    android:text="@string/title" />

                <EditText
                    android:id="@+id/add_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="text" />

                <TextView
                    android:id="@+id/add_details_label"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:labelFor="@id/add_details"
                    android:text="@string/details" />

                <EditText
                    android:id="@+id/add_details"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="text" />

                <TextView
                    android:id="@+id/add_date_label"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:labelFor="@id/add_date"
                    android:text="@string/date_time" />

                <DatePicker
                    android:id="@+id/add_date"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/activity_vertical_margin"/>

                <TextView
                    android:id="@+id/add_time_label"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:labelFor="@id/add_date"
                    android:text="Start" />

                <TimePicker
                    android:id="@+id/add_time"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:timePickerMode="clock" />

                <TextView
                    android:id="@+id/add_dur_label"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/duration" />

                <EditText
                    android:id="@+id/add_dur"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="number|time" />

                <Switch
                    android:id="@+id/rec_switch"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Recurring" />

                <LinearLayout
                    android:id="@+id/rec"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <Spinner
                        android:id="@+id/rec_scale"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1" />

                </LinearLayout>

                <GridLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:columnCount="7"
                    android:rowCount="2">

                    <TextView
                        android:id="@+id/rec_sun"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Sun" />

                    <TextView
                        android:id="@+id/rec_mon"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Mon" />

                    <TextView
                        android:id="@+id/rec_tue"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Tue" />

                    <TextView
                        android:id="@+id/rec_wed"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Wed" />

                    <TextView
                        android:id="@+id/rec_thu"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Thu" />

                    <TextView
                        android:id="@+id/rec_fri"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Fri" />

                    <TextView
                        android:id="@+id/rec_sat"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Sat" />

                    <RadioButton
                        android:id="@+id/rec_sun_button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1" />

                    <RadioButton
                        android:id="@+id/rec_mon_button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1" />

                    <RadioButton
                        android:id="@+id/rec_tue_button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1" />

                    <RadioButton
                        android:id="@+id/rec_wed_button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1" />

                    <RadioButton
                        android:id="@+id/rec_thu_button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:textAlignment="textStart" />

                    <RadioButton
                        android:id="@+id/rec_fri_button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1" />

                    <RadioButton
                        android:id="@+id/rec_sat_button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1" />
                </GridLayout>

            </LinearLayout>

            <Button
                android:id="@+id/add_button"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/add" />

        </LinearLayout>

    </ScrollView>

</android.support.constraint.ConstraintLayout>
